# blind-date-app

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  package-lock.json  package.json
backend/: README.md  config.py  pyproject.toml  requirements.txt
backend/adapters/: DATING_APPS.md  _shared.py  appium_base.py  base.py  bumble.py  hinge.py  registry.py  tinder.py  web_base.py
backend/adapters/planned/: __init__.py  badoo.py  boo.py  christian_mingle.py  coffee_meets_bagel.py  eharmony.py  facebook_dating.py  feeld.py  grindr.py  happn.py  her.py  hily.py  jdate.py  lex.py  match_com.py  muzz.py  okcupid.py  ourtime.py  plenty_of_fish.py  raya.py  taimi.py  the_league.py  zoosk.py
backend/api/: deps.py  main.py
backend/api/routes/: apps.py  dashboard.py  draw.py  inference.py  judge.py  photos.py  profiles.py  review.py  settings.py  swipe.py
backend/db/: connection.py  migrate.py  repository.py
backend/db/migrations/: 0001_initial.sql  0002_settings.sql
backend/domain/: enums.py  types.py
backend/logic/: decision.py  draw.py  hard_filter.py  verdict.py
backend/ml/: PRETRAINED_MODELS.md  _head.py  accuracy.py  combined_model.py  image_model.py  model_store.py  text_model.py  training.py
backend/ml/embeddings/: __init__.py  image_encoder.py  text_encoder.py
backend/services/: fetch_service.py  swipe_service.py  verdict_engine.py
backend/tests/adapters/: test_base.py  test_parsing.py  test_playwright_live.py  test_registry.py
backend/tests/api/: _fakes.py  test_api.py  test_photos.py  test_services.py  test_settings.py
(+54 files in other folders)
